# gpu4pyscf

gpu4pyscf/df/: df.py  df_jk.py
gpu4pyscf/lib/: CMakeLists.txt  mxp_df_helper.py
gpu4pyscf/lib/mxp_df_helper/: CMakeLists.txt  debug.h  mxp_df_helper.cu
gpu4pyscf/mxp_df_helper/: helper.py
gpu4pyscf/scf/: hf.py
test-mxp-df/: README.md  debug.py  fp32-only.diff  get_molecular_formula.py  h100-tests.sh  no-bs.diff  rtx-4090-tests.sh  rtx-6000ada-tests.sh  rtx-a6000-tests.sh  run-all-tests.sh  test-mxp-df.py
test-mxp-df/Docker/: Dockerfile  bashrc.txt  docker-build.sh  vimrc.txt
test-mxp-df/data/: organic  water_clusters
